moved UISplitViewControllerDelegate to splitViewController

--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -371,6 +371,6 @@
         <image name="paper-map-7.png" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="i4A-fg-XKV"/>
+        <segue reference="nrg-7f-M07"/>
     </inferredMetricsTieBreakers>
 </document>
