--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -159,7 +159,7 @@
         <scene sceneID="cCC-DU-zZT">
             <objects>
                 <tableViewController storyboardIdentifier="detailTableViewController" id="3uJ-fO-52Q" customClass="DetailTableViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ndM-hw-Lr2">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ndM-hw-Lr2">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -203,7 +203,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell tag="1" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="h9M-t6-ZeC">
+                                    <tableViewCell tag="1" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="h9M-t6-ZeC">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="h9M-t6-ZeC" id="ecA-Cp-ogY">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -225,7 +225,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell tag="2" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Wdx-B6-Ex6">
+                                    <tableViewCell tag="2" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="Wdx-B6-Ex6">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wdx-B6-Ex6" id="k2T-Ul-LiW">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -247,7 +247,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell tag="3" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="JUS-s7-fIi">
+                                    <tableViewCell tag="3" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="JUS-s7-fIi">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JUS-s7-fIi" id="UU5-0r-4D3">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -269,7 +269,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell tag="5" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="810" id="vVf-LB-Z4X">
+                                    <tableViewCell tag="5" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="810" id="vVf-LB-Z4X">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="vVf-LB-Z4X" id="RjE-m9-k9I">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -301,11 +301,17 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="dateLabel" destination="bi9-5q-8MZ" id="dHv-Y2-rHC"/>
+                        <outlet property="dateLabelCell" destination="JUS-s7-fIi" id="qyR-L2-2bb"/>
                         <outlet property="descriptiveTitle" destination="TTu-oo-iUK" id="74g-xa-RYW"/>
+                        <outlet property="descriptiveTitleCell" destination="Wdx-B6-Ex6" id="hIT-hq-VZT"/>
                         <outlet property="htmlWebView" destination="f8v-Rq-eqm" id="vrs-aZ-Gzb"/>
                         <outlet property="littleMap" destination="Iyk-mB-qL1" id="jwA-a9-8zH"/>
+                        <outlet property="logoCell" destination="Z5o-Os-scA" id="Gc1-nJ-FB2"/>
                         <outlet property="logoImageView" destination="4lj-eT-YQd" id="2Fm-BQ-we9"/>
+                        <outlet property="mapViewCell" destination="TzC-Iz-Atg" id="Pbk-Lx-2Uj"/>
+                        <outlet property="titleCell" destination="h9M-t6-ZeC" id="gmY-ss-7V0"/>
                         <outlet property="titleLabel" destination="3c1-yW-nNH" id="JXR-yC-YOs"/>
+                        <outlet property="webViewCell" destination="vVf-LB-Z4X" id="nmH-8d-cAF"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qv9-fQ-CHu" userLabel="First Responder" sceneMemberID="firstResponder"/>
